--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,10 @@ name = "logs"
 version = "0.1.0"
 edition = "2024"
 
+[lints.rust]
+non_snake_case = "allow"
+
+[lints.clippy]
+needless_return = "allow"
+
 [dependencies]
